fournisseur et client

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,7 +22,9 @@
     <link rel="stylesheet" href="content/css/font-awesome.min.css" />
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <!-- Bootstrap Js CDN -->
+    <script src="content/assets/js-init/adminlte.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   </head>
   <body class="add-transition pt-page-rotatePullTop-init">
     <!--[if lt IE 9]>
@@ -136,5 +138,7 @@
     </script>-->
 
     <!-- <script src="content/build/app.b81f4459eb1b0cdac4d5.js"></script> -->
+    <!-- 
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script> -->
   </body>
 </html>
