sell and purchase

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -140,5 +140,7 @@
     <!-- <script src="content/build/app.b81f4459eb1b0cdac4d5.js"></script> -->
     <!-- 
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script>
   </body>
 </html>
