--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,6 +25,16 @@
     <script src="content/assets/js-init/adminlte.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <style>
+      .body-bg-img {
+        background-image: url('/content/assets/image-resources/blurred-bg/blurred-bg-10.jpg');
+        height: 100%;
+
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+    </style>
   </head>
   <body class="add-transition pt-page-rotatePullTop-init">
     <!--[if lt IE 9]>
